--- a/acme_project/templates/base.html
+++ b/acme_project/templates/base.html
@@ -9,7 +9,8 @@
   <body>
     {% include "includes/header.html" %}
     <div class="container pt-5">
-      {% block content %}{% endblock %}
+      {% block content %}
+      {% endblock %}
     </div>
   </body>
 </html>
