--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
+<!-- Подключаем библиотеку django_bootstrap5. -->
+{% load django_bootstrap5 %}
 
 {% block content %}
+  <div class="card col-4">
+    <div class="card-header">
+      Калькулятор ожидания дня рождения
+    </div>
+  <div class="card-body">
   <form>
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
+    <!-- Защита -->
+    {% csrf_token %} 
+    <!-- Выводим поля формы с помощью специального тега. -->
+    {% bootstrap_form form %}
+    <!-- Добавляем кнопку отправки данных. -->
+    {% bootstrap_button button_type="submit" content="Отправить" %}
   </form>
+  
   <!-- Присваиваем переменной data объект request.GET -->
   {% with data=request.GET %}
     <!-- В дальнейшем используем имя data вместо request.GET -->
