--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -3,22 +3,38 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
+  <!-- Присваиваем переменной data объект request.GET или POST -->
+  <!-- После сохранения в БД через form новый обьект доступен в шаблоне по form.instance  -->
+  {% with data=form.instance %}
+  <!-- Если в пути запроса содержится строка /edit/. -->
+  {% if '/edit/' in request.path %}
+    <!-- Вывести заголовок и номер записи. -->
+    <h1>Редактировать запись {{ data.pk }}</h1>
+  {% elif "/delete/" in request.path %}
+    <h1>Удалить запись {{ data.pk }}</h1>
+  {% else %}
+    <h1>Создать запись</h1>
+  {% endif %}
   <div class="card col-4">
     <div class="card-header">
       Калькулятор ожидания дня рождения
     </div>
   <div class="card-body">
-  <form method="post">
+  <!-- Тег для передачи файлов добавлен. -->
+  <form method="post" enctype="multipart/form-data">
     <!-- Добавьте тег csrf_token. Без него POST-запрос будет отклонён. -->
     {% csrf_token %}
+    
+    {% if not "/delete/" in request.path %}
+      {% bootstrap_form form %}
     <!-- Выводим поля формы с помощью специального тега. -->
-    {% bootstrap_form form %}
+    {% else %} 
+      <p>{{ data.first_name }} {{ data.last_name }}</p>
+      <p>{{ data.birthday }}</p>
+    {% endif %}
     <!-- Добавляем кнопку отправки данных. -->
     {% bootstrap_button button_type="submit" content="Отправить" %}
   </form>
-  <!-- Присваиваем переменной data объект request.GET или POST -->
-  <!-- После сохранения в БД через form новый обьект доступен в шаблоне по form.instance  -->
-  {% with data=form.instance %}
     <!-- В дальнейшем используем имя data вместо request.GET -->
     {% if form.is_valid %}
       ID новой записи в БД: {{ data.id }}
