--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -16,7 +16,8 @@
     <div class="col-10"> 
       <!-- Обернём каждую запись в тег div -->
       <div> <!-- Текст обернём в отдельный вложенный div -->
-        {{ birthday.first_name }} {{ birthday.last_name }} - {{ birthday.birthday }}
+        {{ birthday.first_name }} {{ birthday.last_name }} - {{ birthday.birthday }} <br>
+        <a href="{% url 'birthday:detail' birthday.id %}">Сколько до дня рождения?</a>
       </div>
         <!-- Ссылку тоже обернём в div; адрес ссылки указываем через namespace:name -->
         <div>
