--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -19,10 +19,24 @@
         {{ birthday.first_name }} {{ birthday.last_name }} - {{ birthday.birthday }} <br>
         <a href="{% url 'birthday:detail' birthday.id %}">Сколько до дня рождения?</a>
       </div>
-      <!-- Начало нового блока кода -->
+      <!-- Вариант реализации №1 -->
       <div>
-        <!-- Тег spaceless убирает из строки лишние пробелы 
-          и переводы строк -->
+        <!-- Чтобы сократить количество кода —
+          введём переменную all_tags, в которой будут лежать все теги объекта -->
+        {% with all_tags=birthday.tags.all %}
+          <!-- Если у записи есть хоть один тег -->
+          {% if all_tags %}
+            <!-- Выводим теги через запятую, самую первую букву делаем заглавной -->
+            {{ all_tags|join:", "|lower|capfirst }} 
+            <!-- Также выводим username пользователя -->
+            пользователя {{ birthday.author.username }}
+          {% endif %}
+        {% endwith %}
+      </div>
+      <!-- Конец нового блока кода -->
+      <!-- Начало нового блока кода РЕАЛИЗАЦИЯ №2 -->
+      <div>
+        <!-- Тег spaceless убирает из строки лишние пробелы и переводы строк -->
         {% spaceless %}
           <!-- Цикл по тегам записи -->
           {% for tag in birthday.tags.all %}
